--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="bg-background text-textColor">
+  <body class="bg-background text-textColor font-serif">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
